<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.sunshine</groupId>
    <artifactId>sunshine-tool</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>sunshine-tool</name>
    <description>
        Talk is cheap, show me the code.
    </description>
    <developers>
        <developer>
            <id>Teamo</id>
            <name>曹焕</name>
            <email>785415580@qq.com</email>
            <roles>
                <role>Java Development Engineer</role>
            </roles>
            <timezone>GMT+8</timezone>
            <organizationUrl>https://github.com/TsukasaHwan</organizationUrl>
        </developer>
    </developers>

    <modules>
        <module>sunshine-core-tool</module>
        <module>sunshine-core-common</module>
        <module>sunshine-core-security</module>
        <module>sunshine-core-log</module>
        <module>sunshine-core-cache</module>
        <module>sunshine-core-mybatis</module>
        <module>sunshine-core-enum</module>
        <module>sunshine-core-oss</module>
        <module>sunshine-core-sms</module>
        <module>sunshine-core-cloud</module>
        <module>sunshine-core-captcha</module>
    </modules>
    <packaging>pom</packaging>

    <properties>
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <spring-boot.version>2.7.17</spring-boot.version>
        <spring-cloud.version>2021.0.8</spring-cloud.version>
        <spring-cloud-alibaba.version>2021.1</spring-cloud-alibaba.version>
        <spring-security-oauth2-server.version>0.4.3</spring-security-oauth2-server.version>
        <guava.version>32.0.1-jre</guava.version>

        <mybatis-plus.version>3.5.7</mybatis-plus.version>
        <mybatis-plus-generator.version>3.5.7</mybatis-plus-generator.version>

        <fastjson.version>2.0.51</fastjson.version>
        <redisson.version>3.32.0</redisson.version>
        <knife4j.version>4.5.0</knife4j.version>

        <tea-openapi.version>0.2.8</tea-openapi.version>
        <dysmsapi20170525.version>2.0.23</dysmsapi20170525.version>
        <tencentcloud-sdk-java.version>3.1.786</tencentcloud-sdk-java.version>
        <aliyun.oss.version>3.16.0</aliyun.oss.version>
        <minio.version>8.5.4</minio.version>

        <jjwt.version>0.12.5</jjwt.version>
        <easyexcel.version>4.0.1</easyexcel.version>
        <transmittable-thread-local.version>2.14.5</transmittable-thread-local.version>
        <google.autoservice.version>1.0.1</google.autoservice.version>
        <javapoet.version>1.12.1</javapoet.version>

        <captcha.version>1.0.6</captcha.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                <version>${spring-cloud-alibaba.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.name}</finalName>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
            <resource>
                <directory>src/main/java</directory>
                <includes>
                    <include>**/*.xml</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <target>${java.version}</target>
                    <source>${java.version}</source>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.8</version>
            </plugin>
        </plugins>
    </build>

</project>